@@ -1,3 +1,8 @@
+2004-01-24  Carl Worth  <cworth@isi.edu>
+
+	* src/cairo_xlib_surface.c (_cairo_xlib_surface_set_filter): Add
+	missing break statements to switch.
+
 2004-01-22  Richard D. Worth  <richard@theworths.org>
 
 	* src/Makefile.am: Add '-no-undefined' to end of
